Add f flex styling to hourly weather cards

--- a/lib/Card.css
+++ b/lib/Card.css
@@ -1,5 +1,8 @@
 .display-card {
   background: #7CDEDC;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
   opacity: 0.9;
   color: #F6F7EB;
   width: 100px;
