--- a/lib/Cards.css
+++ b/lib/Cards.css
@@ -3,3 +3,10 @@
   justify-content: space-around;
   background: #F6F7EB;
 }
+
+.ten-day {
+  display: flex;
+  justify-content: space-around;
+  background: #F6F7EB;
+  margin-top: 50px;
+}
