Storining user input to variable for location search

--- a/lib/Header.css
+++ b/lib/Header.css
@@ -1,11 +1,15 @@
 
-.Header {
+.header-info {
   display: flex;
-  border:1px solid pink;
   justify-content: space-between;
 }
 
 .Header h3 {
   margin: 0 50px;
+}
+
+form {
+  margin: 25px 50px;
+  display: inline-block;
 }
 
