--- a/lib/Current.css
+++ b/lib/Current.css
@@ -1,13 +1,13 @@
 .container {
   display: flex;
   justify-content: space-between;
-  background: #F6F7EB;
+  
 }
 
 .main-weather{
   height: 250px;
   width: 400px;
-  background: #7CDEDC;
+  border: 1px solid white;
   margin: 50px auto;
   padding: 10px;
 }
