--- a/lib/DayCard.css
+++ b/lib/DayCard.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: #7CDEDC;
+  border: 1px solid white;
   width: 100px;
   height: 200px;
 }
