--- a/lib/Header.css
+++ b/lib/Header.css
@@ -4,8 +4,19 @@
   justify-content: space-between;
 }
 
-.Header h3 {
-  margin: 0 50px;
+.logo {
+  margin-right: 50px;
+  font-size: 68px;
+  color: white;
+  font-family: 'Oleo Script', cursive;
+}
+
+.location {
+  font-family: 'Ubuntu', sans-serif;
+  margin-left: 50px;
+  font-size: 28px;
+  color: white;
+
 }
 
 form {
