--- a/lib/Header.css
+++ b/lib/Header.css
@@ -1,3 +1,9 @@
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
 
 .header-info {
   display: flex;
@@ -5,7 +11,7 @@
 }
 
 .logo {
-  margin-right: 50px;
+  margin: 10px 50px 0px 0px;
   font-size: 68px;
   color: white;
   font-family: 'Oleo Script', cursive;
@@ -13,14 +19,40 @@
 
 .location {
   font-family: 'Ubuntu', sans-serif;
-  margin-left: 50px;
+  margin: 55px 0px 0px 50px;
   font-size: 28px;
   color: white;
-
 }
 
 form {
   margin: 25px 50px;
   display: inline-block;
+}
+
+#search {
+  box-sizing: border-box;
+  height: 35px;
+  background: none;
+  border: none;
+  border-bottom: 2px solid #ffe47a;
+  padding-bottom: 5px;
+  color: #ffe47a;
+  font-size: 20px;
+}
+
+#search::placeholder {
+  color: #ffe47a;
+}
+
+#search-btn {
+  font-size: 20px;
+  color: #ffe47a;
+  box-sizing: border-box;
+  margin-left: 5px;
+  border: none;
+  padding-bottom: 5px;
+  border-bottom: 2px solid #ffe47a;
+  background: none;
+  height: 35px;
 }
 
