--- a/lib/styles/App.css
+++ b/lib/styles/App.css
@@ -1,22 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster|Oleo+Script|Ubuntu');
 
 body {
-  width: 100%;
-  height: 1000px;
+  height: 100%;
   padding: 0;
   position: relative;
   margin: 0;
-  overflow: hidden;
+  overflow: show;
   
-  /* Enable GPU Rendering */
-  -webkit-transform: translateZ(0);
+  /* Enable GPU Rendering*/ 
+/*  -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   -o-transform: translateZ(0);
-  transform: translateZ(0);
+  transform: translateZ(0);*/
 }
 
 .blur {
-  /* All the background image supports */
+   All the background image supports 
   transform: translate(0px, 0px, 0px);
   background-image: -webkit-linear-gradient(bottom left, rgba(58, 198, 205, 0.7) 10%, rgba(78,144,210, 0.9) 45%, rgba(84,129,214, 0.9) 70%);
   background-image: -moz-linear-gradient(bottom left, rgba(58, 198, 205,0.7) 10%, rgba(78,144,210, 0.9) 45%, rgba(84,129,214, 0.9)) 70%);
@@ -26,7 +25,7 @@ body {
   width: 100%;
   height: 100%;
   
-  /* blur filters */
+  /* blur filters 
   -webkit-filter: blur(20px);
   -o-filter: blur(20px);
   filter: blur(20px);
@@ -42,7 +41,7 @@ body {
 .blur:after {
   content: '';
   position: absolute;
-  height: 100%;
+  height: 50%;
   width: 100%;
   z-index: 1001;
 
