--- a/lib/styles/Cards.css
+++ b/lib/styles/Cards.css
@@ -9,3 +9,13 @@
   justify-content: space-around;
   margin-top: 50px;
 }
+
+.hour-icon {
+  height: 40px;
+  width: 40px;
+}
+
+.daycard-icon {
+  height: 40px;
+  width: 40px;
+}
