--- a/lib/styles/Card.css
+++ b/lib/styles/Card.css
@@ -3,7 +3,7 @@
   border: 1px solid white;
   display: flex;
   flex-direction: column;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   opacity: 0.9;
   padding-bottom: 20px;
   width: 120px;
