--- a/lib/styles/DayCard.css
+++ b/lib/styles/DayCard.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   border: 1px solid white;
+  border-radius: 10px;
   width: 100px;
   height: 200px;
   font-family: 'Open Sans', sans-serif;
