--- a/lib/styles/Search.css
+++ b/lib/styles/Search.css
@@ -44,12 +44,32 @@ form {
 }
 
 @media (max-width: 400px) {
+
+  .form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
+
   #search {
+    background-color: white;
     font-size: 14px;
+    display: block;
+    margin: auto;
+    border-bottom: 2px solid white;
+  }
+
+  #search::placeholder {
+    text-align: center;
+    color: #587DCC;
+    font-weight: 300
   }
 
   #search-btn {
     font-size: 14px;
+    display: block;
+    margin: auto;
+    margin-top: 10px;
   }
 }
 
