--- a/lib/styles/App.css
+++ b/lib/styles/App.css
@@ -3,18 +3,11 @@
 #app {
   margin: auto;
 }
+
 body {
-  /*height: 100%;*/
   padding: 0;
   position: relative;
   margin: 0;
-  /*overflow: show;*/
-  
-  /* Enable GPU Rendering*/ 
-  /*  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  -o-transform: translateZ(0);
-  transform: translateZ(0);*/
 }
 
 .blur {
@@ -28,11 +21,6 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  
-  /* blur filters 
-  -webkit-filter: blur(20px);
-  -o-filter: blur(20px);
-  filter: blur(20px);
   
   /* positioning and removing edges */
   top: -70px;
@@ -63,6 +51,13 @@ body {
   -webkit-filter: blur(90px);
   -o-filter: blur(90px);
   filter: blur(90px);
+}
+
+.day {
+  color: white;
+  font-weight: 300;
+  text-transform: uppercase;
+  /*letter-spacing: 3px;*/
 }
 
 @media (max-width: 770px) {
