Add fallback font, small lint tweaks

--- a/lib/styles/Footer.css
+++ b/lib/styles/Footer.css
@@ -1,6 +1,6 @@
 footer p {
   color: white;
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   margin-top: 50px;
   text-align: center;
