--- a/lib/styles/Cards.css
+++ b/lib/styles/Cards.css
@@ -24,7 +24,7 @@
 
 h3 {
   color: white;
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   display: block;
   letter-spacing: 3px;
