--- a/lib/styles/Welcome.css
+++ b/lib/styles/Welcome.css
@@ -49,7 +49,7 @@ body {
 
 .welcome h1 {
   color: white;
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   letter-spacing: 3px;
   text-align: center;
