--- a/lib/styles/Search.css
+++ b/lib/styles/Search.css
@@ -7,7 +7,7 @@ button:focus {
 
 form {
   margin: 25px 50px;
-  display: inline-block;
+  display: flex !important;
 }
 
 #search {
@@ -43,12 +43,34 @@ form {
   background-color: #f6a71c;
 }
 
+.loader:empty {
+  margin-left: 25px;
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  border: .3em solid #f6a71c;
+  border-left: .3em solid #5578C3;
+  border-top-color: rgba(58, 198, 205, 0.7);
+  border-right-color: rgba(78,144,210, 0.9);
+  border-bottom-color: rgba(84,129,214, 0.9);
+  border-radius: 50%;
+  animation: load8 1.1s infinite linear;
+}
+
+@keyframes load8 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @media (max-width: 400px) {
 
   .form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    flex-direction: column;
+    align-items: center;
   }
 
   #search {
@@ -62,7 +84,7 @@ form {
   #search::placeholder {
     text-align: center;
     color: #587DCC;
-    font-weight: 300
+    font-weight: 300;
   }
 
   #search-btn {
